--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>lab 5 Js</title>
 </head>
 <body>
+    <div>
+        To start using User Propmt Program of adding Employees: 
+        <button onclick="startPro()">click Me </button>
+    </div>
     <script src="fun.js"></script>
 </body>
 </html>
